2009-10-21 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSColor.m (-colorUsingColorSpace): Add some dummy
	implementation for this method.
	* Source/NSColorSpace.m: Correct indention.
	* Header/AppKit/NSGradient.h,
	* Source/NSGradient.m: New files implementing the gui part of
	colour gradients.
	* Headers/AppKit/AppKit.h: Add include for NSGradient.h
	* Source/GNUmakefile: Add new files.
	
2009-10-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSDocumentController.m(-openDocumentWithContentsOfURL:display:,
	-openDocumentWithContentsOfURL:display:error:): Call
	-noteNewRecentDocument: instead of -noteNewRecentDocumentURL:.

	* Source/NSDocumentController.m (-_updateOpenRecentMenu): Fix an
	off by one error which would crash programs with an open recent
	menu.

2009-10-19 Riccardo Mottola <rmottola@users.sf.net>

	* Source/GSWindowDecorationView.h: add method declaration 
	so that certain compilers pick up the correct signature

2009-10-19 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSThemeTools.m: Fix broken drawing due to error in
	the ([-validateTilesSizeWithImage:]) method.
	Fix broken ([-drawCornersRect:]) too.

2009-10-19 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSThemeTools.m: Fix last changes to compile again (variable
	declarations not at startof block only work on some compilers).
	* Source/GSTheme.m: Functions for working with fill style names.
	* Source/NSApplication.m: Fixup to show suppressed icon when app is
	deactivated.  Fix uninitialisaed variable causing crashes on failing
	to use document controller to open an untitled document.
	Drop non-standard method (which didn't work) for determining whether
	we have a document based app.
	* Source/NSDocumentController.m: Rewrite code for determining 
	whether the current app is document based. Cache singleton information
	in static variables rether than ivars.

2009-10-19 Nicolas Roard <nicolas@roard.com>
	* Source/GSTheme.m:
	* Source/GSThemeTools.m:
	* Source/GSThemePrivate.h: